1. 实现type的save, find, update接口

--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,25 @@
 buildscript {
-
-    //build script中的声明是gradle脚本自身需要使用的资源
     repositories {
         mavenCentral()
     }
-
     dependencies {
-        classpath('org.springframework.boot:spring-boot-gradle-plugin:1.4.0.RELEASE')
-        classpath("org.springframework:spring-core:4.3.2.RELEASE")
-        classpath('org.springframework.boot:spring-boot-loader-tools:1.4.0.RELEASE')
-        classpath("io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.1.RELEASE")
     }
 }
 
 allprojects {
     apply plugin: 'java'
-    group 'notepad'
-    version '1.0-SNAPSHOT'
+    apply plugin: 'idea'
+    group 'spring-data-jap-note'
+    version '1.0'
+
 }
 
 subprojects {
     apply plugin: 'war'
-    apply plugin: 'spring-boot'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
@@ -30,49 +28,20 @@ subprojects {
     }
 
     dependencies {
-        // If you are building a web site for your business,
-        // you probably need to add some management services
-        compile("org.springframework.boot:spring-boot-starter-actuator:1.4.0.RELEASE")
-        testCompile("org.springframework.boot:spring-boot-starter-test:1.4.0.RELEASE")
-        testCompile group: 'junit', name: 'junit', version: '4.12'
-    }
-}
+        // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
 
-project(':web') {
-    war {
-        baseName = 'web'
-    }
-    bootRepackage {
-        mainClass = ""
-    }
-}
 
-project(':sal') {
-    jar {
-        baseName = 'sal'
+        // JPA Data (We are going to use Repositories, Entities, Hibernate, etc...)
+        compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.1.RELEASE'
+
+
+        // Use MySQL Connector-J
+        compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+
+        testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
     }
 
-    bootRepackage {
-        enabled = false
-    }
-}
-
-project(':dal') {
-    jar {
-        baseName = 'dal'
-    }
-    bootRepackage {
-        enabled = false
-    }
-}
-
-project(':domain') {
-    jar {
-        baseName = 'domain'
-    }
-    bootRepackage {
-        enabled = false
-    }
 }
 
 
