--- a/web/build.gradle
+++ b/web/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
 }
-
+group 'spring-data-jap-note'
 version '1.0'
 
 sourceCompatibility = 1.8
@@ -11,5 +11,7 @@ repositories {
 }
 
 dependencies {
+    compile project(":sal")
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
