--- a/dal/build.gradle
+++ b/dal/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
 }
 
+group 'spring-data-jap-note'
 version '1.0'
 
 sourceCompatibility = 1.8
@@ -11,5 +12,7 @@ repositories {
 }
 
 dependencies {
+    compile project(":domain")
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
