1. 添加swagger 2. 尝试oneToMany失败

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,6 +1,28 @@
+# spring≈‰÷√
+server.port=8080
+
+
 # mysql ≈‰÷√
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/knowledge_graph
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=false
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+
+# druid
+spring.datasource.max-active=20
+spring.datasource.max-idle=8
+spring.datasource.min-idle=8
+spring.datasource.initial-size=10
+
+
+# swagger≈‰÷√
+swagger.enabled=true
+swagger.scan=note.controller
+swagger.title=Swagger
+swagger.description=SwaggerAPI
+swagger.version=1.0
