--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     repositories {
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
         mavenCentral()
     }
     dependencies {
@@ -24,6 +27,9 @@ subprojects {
     targetCompatibility = 1.8
 
     repositories {
+        maven {
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
         mavenCentral()
     }
 
@@ -38,6 +44,16 @@ subprojects {
 
         // Use MySQL Connector-J
         compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+
+        // swagger 后台开发的神器，也是前后端交流的渠道
+        // https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+        compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+        // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+        compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+        // druid 数据库连接池
+        compile group: 'com.alibaba', name: 'druid', version: '1.1.10'
 
         testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.1.1.RELEASE'
     }
